// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListCreate list details is shown 1`] = `
<div
  className="container"
>
  <div
    className="list-creator"
  >
    <h1
      className="list-creator__headline mt2"
    >
      Redigér liste
    </h1>
    <div
      className="row"
    >
      <div
        className="col-8"
      >
        <form
          className="mb4"
          onSubmit={[Function]}
        >
          <div
            className="list-details"
          >
            <div
              className="form-group"
            >
              <span
                className="required "
              >
                <input
                  className="form-control"
                  name="list-title"
                  onChange={[Function]}
                  placeholder="Giv din liste en titel"
                  type="text"
                  value="some title"
                />
                
              </span>
              <textarea
                className="form-control list-details__description"
                name="list-description"
                onChange={[Function]}
                placeholder="Skriv lidt om din liste"
                value="some description"
              />
              <div
                className="mt1 text-left"
              >
                <div
                  className="image-upload mt1 "
                >
                  <div
                    className="image-upload--zone"
                    style={
                      Object {
                        "borderRadius": "5px",
                        "height": "150px",
                        "overflow": "hidden",
                        "width": "150px",
                      }
                    }
                  >
                    <div
                      className="d-flex align-items-center justify-content-center h-100 "
                    >
                      <i
                        className="material-icons"
                        style={
                          Object {
                            "fontSize": 100,
                          }
                        }
                      >
                        image
                      </i>
                    </div>
                    <div
                      className="droppable-image-overlay"
                    >
                      
                    </div>
                  </div>
                  <div
                    style={
                      Object {
                        "clear": "both",
                      }
                    }
                  />
                  <label>
                    <span
                      className="btn btn-primary mt1"
                    >
                      Upload billede
                    </span>
                    <input
                      accept="image/png, image/jpeg"
                      className="droppable-image-field--file-input"
                      name={undefined}
                      onChange={[Function]}
                      type="file"
                    />
                  </label>
                </div>
              </div>
            </div>
          </div>
          <h2
            className="list-creator__headline"
          >
            Tilføj bøger til listen
          </h2>
          <div
            className="list-drag"
          >
            <BookSearchSuggester
              list={
                Object {
                  "_id": "current-list-id",
                  "description": "some description",
                  "list": Array [],
                  "open": true,
                  "public": true,
                  "social": true,
                  "title": "some title",
                }
              }
              onSubmit={[Function]}
            />
            <div
              className="drag-list "
            />
          </div>
          <div
            className="mt3 mb3"
          >
            <div
              className="list-creator__checkbox"
            >
              <label
                htmlFor="public"
              >
                <input
                  checked={true}
                  id="public"
                  name="public"
                  onClick={[Function]}
                  type="checkbox"
                />
                <span />
                Skal listen være offentlig?
              </label>
            </div>
            <div
              className="list-creator__checkbox"
            >
              <label
                htmlFor="social"
              >
                <input
                  checked={true}
                  id="social"
                  name="social"
                  onClick={[Function]}
                  type="checkbox"
                />
                <span />
                Skal andre kunne kommentere på listen?
              </label>
            </div>
            <div
              className="list-creator__checkbox"
            >
              <label
                htmlFor="open"
              >
                <input
                  checked={true}
                  id="open"
                  name="open"
                  onClick={[Function]}
                  type="checkbox"
                />
                <span />
                Skal andre kunne føje til listen?
              </label>
            </div>
          </div>
          <div
            className="list-creator__submit text-right"
          >
            <button
              className="btn btn-primary"
              type="submit"
            >
              Gem liste
            </button>
          </div>
          <span
            className="text-danger"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            Slet liste
          </span>
          <span
            className="text-danger"
            style={
              Object {
                "cursor": "default",
              }
            }
          >
             | 
          </span>
          <Link
            href="/profile"
            replace="HISTORY_REPLACE"
          >
            Fortryd redigering af liste
          </Link>
        </form>
      </div>
      <div
        className="col-4"
      />
    </div>
  </div>
</div>
`;

exports[`ListCreate renders a list with multiple books 1`] = `
<div
  className="container"
>
  <div
    className="list-creator"
  >
    <h1
      className="list-creator__headline mt2"
    >
      Redigér liste
    </h1>
    <div
      className="row"
    >
      <div
        className="col-8"
      >
        <form
          className="mb4"
          onSubmit={[Function]}
        >
          <div
            className="list-details"
          >
            <div
              className="form-group"
            >
              <span
                className="required "
              >
                <input
                  className="form-control"
                  name="list-title"
                  onChange={[Function]}
                  placeholder="Giv din liste en titel"
                  type="text"
                  value="some title"
                />
                
              </span>
              <textarea
                className="form-control list-details__description"
                name="list-description"
                onChange={[Function]}
                placeholder="Skriv lidt om din liste"
                value="some description"
              />
              <div
                className="mt1 text-left"
              >
                <div
                  className="image-upload mt1 "
                >
                  <div
                    className="image-upload--zone"
                    style={
                      Object {
                        "borderRadius": "5px",
                        "height": "150px",
                        "overflow": "hidden",
                        "width": "150px",
                      }
                    }
                  >
                    <div
                      className="d-flex align-items-center justify-content-center h-100 "
                    >
                      <i
                        className="material-icons"
                        style={
                          Object {
                            "fontSize": 100,
                          }
                        }
                      >
                        image
                      </i>
                    </div>
                    <div
                      className="droppable-image-overlay"
                    >
                      
                    </div>
                  </div>
                  <div
                    style={
                      Object {
                        "clear": "both",
                      }
                    }
                  />
                  <label>
                    <span
                      className="btn btn-primary mt1"
                    >
                      Upload billede
                    </span>
                    <input
                      accept="image/png, image/jpeg"
                      className="droppable-image-field--file-input"
                      name={undefined}
                      onChange={[Function]}
                      type="file"
                    />
                  </label>
                </div>
              </div>
            </div>
          </div>
          <h2
            className="list-creator__headline"
          >
            Tilføj bøger til listen
          </h2>
          <div
            className="list-drag"
          >
            <BookSearchSuggester
              list={
                Object {
                  "_id": "current-list-id",
                  "description": "some description",
                  "list": Array [
                    Object {
                      "book": Object {
                        "creator": "some creator3",
                        "pid": "pid3",
                        "title": "some title3",
                      },
                      "description": "some description3",
                      "links": Object {
                        "cover": "/cover3",
                      },
                    },
                    Object {
                      "book": Object {
                        "creator": "some creator2",
                        "pid": "pid2",
                        "title": "some title2",
                      },
                      "description": "some description2",
                      "links": Object {
                        "cover": "/cover2",
                      },
                    },
                    Object {
                      "book": Object {
                        "creator": "some creator1",
                        "pid": "pid1",
                        "title": "some title1",
                      },
                      "description": "some description1",
                      "links": Object {
                        "cover": "/cover1",
                      },
                    },
                  ],
                  "public": false,
                  "title": "some title",
                }
              }
              onSubmit={[Function]}
            />
            <div
              className="drag-list "
            >
              <div
                className="drag-item flex"
                onMouseEnter={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <img
                  alt="drag book"
                  className="drag-item__dragger"
                  onMouseDown={[Function]}
                  src="drag.svg"
                />
                <div
                  className="flex list-item"
                >
                  <BookCover
                    book={
                      Object {
                        "creator": "some creator3",
                        "pid": "pid3",
                        "title": "some title3",
                      }
                    }
                    className="list-item__img"
                  />
                  <div
                    className="list-item__details"
                  >
                    <div
                      className="list-item__title"
                    >
                      some title3
                    </div>
                    <div
                      className="list-item__author"
                    >
                      some creator3
                    </div>
                    <textarea
                      className="form-control"
                      name="list-description"
                      onChange={[Function]}
                      placeholder="Skriv en kommentar til bogen"
                      value="some description3"
                    />
                  </div>
                </div>
                <div>
                  <span
                    className="list-item__close"
                    onClick={[Function]}
                  />
                </div>
              </div>
              <div
                className="drag-item flex"
                onMouseEnter={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <img
                  alt="drag book"
                  className="drag-item__dragger"
                  onMouseDown={[Function]}
                  src="drag.svg"
                />
                <div
                  className="flex list-item"
                >
                  <BookCover
                    book={
                      Object {
                        "creator": "some creator2",
                        "pid": "pid2",
                        "title": "some title2",
                      }
                    }
                    className="list-item__img"
                  />
                  <div
                    className="list-item__details"
                  >
                    <div
                      className="list-item__title"
                    >
                      some title2
                    </div>
                    <div
                      className="list-item__author"
                    >
                      some creator2
                    </div>
                    <textarea
                      className="form-control"
                      name="list-description"
                      onChange={[Function]}
                      placeholder="Skriv en kommentar til bogen"
                      value="some description2"
                    />
                  </div>
                </div>
                <div>
                  <span
                    className="list-item__close"
                    onClick={[Function]}
                  />
                </div>
              </div>
              <div
                className="drag-item flex"
                onMouseEnter={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <img
                  alt="drag book"
                  className="drag-item__dragger"
                  onMouseDown={[Function]}
                  src="drag.svg"
                />
                <div
                  className="flex list-item"
                >
                  <BookCover
                    book={
                      Object {
                        "creator": "some creator1",
                        "pid": "pid1",
                        "title": "some title1",
                      }
                    }
                    className="list-item__img"
                  />
                  <div
                    className="list-item__details"
                  >
                    <div
                      className="list-item__title"
                    >
                      some title1
                    </div>
                    <div
                      className="list-item__author"
                    >
                      some creator1
                    </div>
                    <textarea
                      className="form-control"
                      name="list-description"
                      onChange={[Function]}
                      placeholder="Skriv en kommentar til bogen"
                      value="some description1"
                    />
                  </div>
                </div>
                <div>
                  <span
                    className="list-item__close"
                    onClick={[Function]}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="mt3 mb3"
          >
            <div
              className="list-creator__checkbox"
            >
              <label
                htmlFor="public"
              >
                <input
                  checked={false}
                  id="public"
                  name="public"
                  onClick={[Function]}
                  type="checkbox"
                />
                <span />
                Skal listen være offentlig?
              </label>
            </div>
            <div
              className="list-creator__checkbox"
            >
              <label
                htmlFor="social"
              >
                <input
                  checked={false}
                  id="social"
                  name="social"
                  onClick={[Function]}
                  type="checkbox"
                />
                <span />
                Skal andre kunne kommentere på listen?
              </label>
            </div>
            <div
              className="list-creator__checkbox"
            >
              <label
                htmlFor="open"
              >
                <input
                  checked={false}
                  id="open"
                  name="open"
                  onClick={[Function]}
                  type="checkbox"
                />
                <span />
                Skal andre kunne føje til listen?
              </label>
            </div>
          </div>
          <div
            className="list-creator__submit text-right"
          >
            <button
              className="btn btn-primary"
              type="submit"
            >
              Gem liste
            </button>
          </div>
          <span
            className="text-danger"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            Slet liste
          </span>
          <span
            className="text-danger"
            style={
              Object {
                "cursor": "default",
              }
            }
          >
             | 
          </span>
          <Link
            href="/profile"
            replace="HISTORY_REPLACE"
          >
            Fortryd redigering af liste
          </Link>
        </form>
      </div>
      <div
        className="col-4"
      />
    </div>
  </div>
</div>
`;

exports[`ListCreate renders a list with one book 1`] = `
<div
  className="container"
>
  <div
    className="list-creator"
  >
    <h1
      className="list-creator__headline mt2"
    >
      Redigér liste
    </h1>
    <div
      className="row"
    >
      <div
        className="col-8"
      >
        <form
          className="mb4"
          onSubmit={[Function]}
        >
          <div
            className="list-details"
          >
            <div
              className="form-group"
            >
              <span
                className="required "
              >
                <input
                  className="form-control"
                  name="list-title"
                  onChange={[Function]}
                  placeholder="Giv din liste en titel"
                  type="text"
                  value="some title"
                />
                
              </span>
              <textarea
                className="form-control list-details__description"
                name="list-description"
                onChange={[Function]}
                placeholder="Skriv lidt om din liste"
                value="some description"
              />
              <div
                className="mt1 text-left"
              >
                <div
                  className="image-upload mt1 "
                >
                  <div
                    className="image-upload--zone"
                    style={
                      Object {
                        "borderRadius": "5px",
                        "height": "150px",
                        "overflow": "hidden",
                        "width": "150px",
                      }
                    }
                  >
                    <div
                      className="d-flex align-items-center justify-content-center h-100 "
                    >
                      <i
                        className="material-icons"
                        style={
                          Object {
                            "fontSize": 100,
                          }
                        }
                      >
                        image
                      </i>
                    </div>
                    <div
                      className="droppable-image-overlay"
                    >
                      
                    </div>
                  </div>
                  <div
                    style={
                      Object {
                        "clear": "both",
                      }
                    }
                  />
                  <label>
                    <span
                      className="btn btn-primary mt1"
                    >
                      Upload billede
                    </span>
                    <input
                      accept="image/png, image/jpeg"
                      className="droppable-image-field--file-input"
                      name={undefined}
                      onChange={[Function]}
                      type="file"
                    />
                  </label>
                </div>
              </div>
            </div>
          </div>
          <h2
            className="list-creator__headline"
          >
            Tilføj bøger til listen
          </h2>
          <div
            className="list-drag"
          >
            <BookSearchSuggester
              list={
                Object {
                  "_id": "current-list-id",
                  "description": "some description",
                  "list": Array [
                    Object {
                      "book": Object {
                        "creator": "some creator1",
                        "pid": "pid1",
                        "title": "some title1",
                      },
                      "description": "some description1",
                      "links": Object {
                        "cover": "/cover1",
                      },
                    },
                  ],
                  "open": false,
                  "owner": 1,
                  "public": false,
                  "social": false,
                  "title": "some title",
                }
              }
              onSubmit={[Function]}
            />
            <div
              className="drag-list "
            >
              <div
                className="drag-item flex"
                onMouseEnter={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <img
                  alt="drag book"
                  className="drag-item__dragger"
                  onMouseDown={[Function]}
                  src="drag.svg"
                />
                <div
                  className="flex list-item"
                >
                  <BookCover
                    book={
                      Object {
                        "creator": "some creator1",
                        "pid": "pid1",
                        "title": "some title1",
                      }
                    }
                    className="list-item__img"
                  />
                  <div
                    className="list-item__details"
                  >
                    <div
                      className="list-item__title"
                    >
                      some title1
                    </div>
                    <div
                      className="list-item__author"
                    >
                      some creator1
                    </div>
                    <textarea
                      className="form-control"
                      name="list-description"
                      onChange={[Function]}
                      placeholder="Skriv en kommentar til bogen"
                      value="some description1"
                    />
                  </div>
                </div>
                <div>
                  <span
                    className="list-item__close"
                    onClick={[Function]}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="mt3 mb3"
          >
            <div
              className="list-creator__checkbox"
            >
              <label
                htmlFor="public"
              >
                <input
                  checked={false}
                  id="public"
                  name="public"
                  onClick={[Function]}
                  type="checkbox"
                />
                <span />
                Skal listen være offentlig?
              </label>
            </div>
            <div
              className="list-creator__checkbox"
            >
              <label
                htmlFor="social"
              >
                <input
                  checked={false}
                  id="social"
                  name="social"
                  onClick={[Function]}
                  type="checkbox"
                />
                <span />
                Skal andre kunne kommentere på listen?
              </label>
            </div>
            <div
              className="list-creator__checkbox"
            >
              <label
                htmlFor="open"
              >
                <input
                  checked={false}
                  id="open"
                  name="open"
                  onClick={[Function]}
                  type="checkbox"
                />
                <span />
                Skal andre kunne føje til listen?
              </label>
            </div>
          </div>
          <div
            className="list-creator__submit text-right"
          >
            <button
              className="btn btn-primary"
              type="submit"
            >
              Gem liste
            </button>
          </div>
          <span
            className="text-danger"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
          >
            Slet liste
          </span>
          <span
            className="text-danger"
            style={
              Object {
                "cursor": "default",
              }
            }
          >
             | 
          </span>
          <Link
            href="/profile"
            replace="HISTORY_REPLACE"
          >
            Fortryd redigering af liste
          </Link>
        </form>
      </div>
      <div
        className="col-4"
      />
    </div>
  </div>
</div>
`;
